syntax = "proto3";

message HelloRequest{
	string Message = 1;
}
message HelloReply{
	string Message = 1;
}

service HelloService{
	rpc SayHello(HelloRequest) returns (HelloReply) {}
}